--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,4 +1,4 @@
-<div class="content-box">
+div class="content-box">
   <h1>Login</h1>
   <form id="loginForm" class="login-form">
     <input type="text" name="username" placeholder="Username" required>
