--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -2,23 +2,25 @@
   <main>
     <div class="content-box">
       <h1>Register</h1>
-      <form id="registerForm" class="login-form">
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username" required>
-
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" required>
-
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
-
-
+	  <div class="register-form-box">
+	      <form id="registerForm" class="login-form">
+	        <label for="username">Username</label>
+	        <input type="text" name="username" id="username" required>
+	
+	        <label for="email">Email</label>
+	        <input type="email" name="email" id="email" required>
+	
+	        <label for="password">Password</label>
+	        <input type="password" name="password" id="password" required>
+	
+			<div class="button-group">
+			  <button type="button" id="confirm-registration" class="auth-btn">Register</button>
+			</div>
+		</div>
       </form>
 
       <p id="message"></p>
-	  <div class="button-group">
-	    <button type="button" id="confirm-registration" class="auth-btn">Register</button>
-	  </div>
+
     </div>
   </main>
   <script src="/scripts/register.js"></script>
